--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,42 @@
+@import 'node_modules/modern-normalize/modern-normalize.css';
+
 @font-face {
-    font-family: 'norsebold';
-    src: url('./fonts/norse-bold-webfont.woff2') format('woff2'),
-         url('./fonts/norse-bold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-/*
-  Josh's Custom CSS Reset
-  https://www.joshwcomeau.com/css/custom-css-reset/
-*/
-*, *::before, *::after {
-    box-sizing: border-box;
-  }
-  * {
-    margin: 0;
-  }
-  body {
-    line-height: 1.5;
-    -webkit-font-smoothing: antialiased;
-  }
-  img, picture, video, canvas, svg {
-    display: block;
-    max-width: 100%;
-  }
-  input, button, textarea, select {
-    font: inherit;
-  }
-  p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
-  }
-  #root, #__next {
-    isolation: isolate;
-  }
-
-* {
-    font-family: sans-serif;
+  font-family: "norsebold";
+  src: url("./fonts/norse-bold-webfont.woff2") format("woff2"),
+    url("./fonts/norse-bold-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
-    display: flex;
+  display: flex;
 }
 
-img {
-    max-width: 100%;
-    width: 750px;
-    height: auto;
+.image-holder {
+  background: no-repeat center/100% url(halie-west.jpg);
+  background-size: cover;
+  position: relative;
+  height: 100vh;
+  width: 40%;
 }
 
+.side-body {
+  background: rgba(0, 0, 0, 0.5);
+  margin-top: 30%;
+  font-family: "norsebold", sans-serif, Tahoma;
+  display: flex;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
 
+.side-logo {
+  width: auto;
+  height: 120px;
+}
+
+.side-heading {
+  font-size: 80px;
+  margin: 0;
+}
